# flashcards-by-ethan

./: .gitignore  CMakeLists.txt  LICENSE  README.md  changelog.html  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
snap/: snapcraft.yaml
snap/gui/: flashcards-by-ethan.desktop
